--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -10,12 +10,11 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="C:/Users/Anirudh Nagraj/Documents/GitHub/main/assets/img/Personal/Logo.png" rel="icon">
+  <link href="assets/img/Personal/Logo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
@@ -27,21 +26,32 @@
   <!-- Template Main CSS File -->
   <link href="assets\css\style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: MyResume - v2.2.0
-  * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
 
+	<!-- ======= Mobile nav toggle button ======= -->
+  <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
+
+  <!-- ======= Header ======= -->
+  <header id="header" class="d-flex flex-column justify-content-center">
+
+    <nav class="nav-menu">
+      <ul>
+        <li class="active"><a href="#portfolio-details"><i class="bx bx-home"></i> <span>Home</span></a></li>
+        <li><a href="#requirements"><i class='bx bxs-data'></i><span>Requirements</span></a></li>
+        <li><a href="#process"><i class='bx bxl-product-hunt' ></i> <span>Process</span></a></li>
+		<li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+        <!-- <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li> -->
+      </ul>
+    </nav><!-- .nav-menu -->
+
+  </header><!-- End Header -->
   <main id="main">
 
     <!-- ======= Portfolio Details ======= -->
     <section id="portfolio-details" class="portfolio-details">
-      <div class="container" data-aos="fade-up">
+      <div class="container herosection" data-aos="fade-up">
 
         <div class="row">
 
@@ -73,23 +83,56 @@
       </div>
     </section><!-- End Portfolio Details -->
 	
+	<!-- ======= INTRODUCTION Details ======= -->
+	<section id="portfolio-details" class="portfolio-details">
+      <div class="container" data-aos="fade-up">
+
+		  <div class ="row">
+		  <div class ="col-md-2">
+		  <img src="assets/img/Personal/avatar1.png" class="img-fluid avatar" alt="">
+          </div>
+		  <div class="col-md-10">
+		  <p class="justified">
+            <span class = "introtext"> Meet Emi, a 38 year old runner who is visually impaired. He wants a device that can help him detect obstacles while running. So he came to us for help. </span> </p>
+			<span class = "introtext"> and we decided to build a device for him. </span> </p>
+          </div>
+		</div>
+        </div>
+    </section><!-- End Portfolio Details -->
+	
 	<section id="portfolio-details" class="portfolio-details">
       <div class="container" data-aos="fade-up">
 
           <div>
-          <h2 class="prototype-introduction">INTRODUCTION</h2>
+          <h2 class="prototype-introduction" id="requirements">So what are Emi's base requirements?</h2>
           </div>
-          <p class="justified">
-             So I would like you to imagine a scenario where you are jogging a long route. You are working hard to maintain your pace, focusing on your breathing, and listening to loud upbeat music to motivate yourself to keep going. With all that’s going on, it can be easy to miss other runners or cyclists passing behind you and dips or hazards on the path which can impede your run. These factors can prove even more of a challenge if you are blind. </p>
+		  <p class="justified">
+            <span class = "introtext"> Emi wants a device that relies on haptics and uses sensors to detect obstacles. He also wants it to be non-invasive and portable so that it does not hinder his run.</span> </p>
           </div>
-
+		</div>
         </div>
-
-      </div>
-    </section><!-- End Portfolio Details -->
+    </section>
 	
 	
   </main><!-- End #main -->
+  
+   <!-- ======= Footer ======= -->
+  <footer id="footer">
+    <div class="container">
+      <h3>Anirudh Nagraj</h3>
+      <p>Come say a hi! 👋</p>
+      <div class="social-links">
+        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      </div>
+      <div class="copyright">
+        <strong><span>Curated with a lot of thought and passion </span></strong>.
+      </div>
+    </div>
+  </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
   <div id="preloader"></div>
