--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -30,7 +30,23 @@
 </head>
 
 <body>
-
+<nav class="navbar navbar-expand-lg navbar-light light">
+  <a class="navbar-brand" href="#"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#"><span class="whitecolor">Home</span> <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#"><span class="whitecolor">Projects</span></a>
+      </li>
+    </ul>
+    <span class="whitecolor">A researcher who loves storytelling</span>
+  </div>
+</nav>
   <main id="main">
 
     <!-- ======= Portfolio Details ======= -->
